# mochi-analysis

./: .env.example  .gitignore  README.md  STATUS.md  alembic.ini  pyproject.toml  render.yaml  test_analysis_output.json  test_real_data.py
alembic/: env.py
alembic/versions/: 54ce56a568de_initial_tables.py
config/: charts.toml  cms_templates.toml
requirements/: base.txt  dev.txt  prod.txt  test.txt  test_full.txt  test_minimal.txt
scripts/: test_real_data.py
src/mochi_analytics/api/: __init__.py  app.py  models.py
src/mochi_analytics/api/routes/: __init__.py  analysis.py  exports.py  jobs.py  organizations.py  reports.py  tasks.py
src/mochi_analytics/core/: analyzer.py  avatars.py  constants.py  llm.py  metrics.py  models.py  objections.py  script_search.py  scripts.py  setters.py  time_series.py
src/mochi_analytics/exporters/: __init__.py  charts.py  csv.py  json.py  slack.py
src/mochi_analytics/integrations/: __init__.py  airtable.py  framer.py  mochi.py  slack.py
src/mochi_analytics/storage/: database.py  models.py
src/mochi_analytics/workers/: __init__.py  queue.py  tasks.py
tests/fixtures/: sample_conversations.json
tests/unit/: test_analyzer.py  test_metrics.py
